CSS z-index, fix audio on Chromium

--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,7 @@ a:active {
 
 .wrapper div {
 	position: absolute;
+	z-index: 10;
 }
 
 .sp-canvas {
